Bug 375740 - Shaded windows no longer valid target for snapping.
Summary: Shaded windows no longer valid target for snapping.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 5.25.3
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2017-01-30 07:23 UTC by Matthew Guiddy
Modified: 2023-02-25 16:07 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
Visual example of shaded windows not snapping. (265.12 KB, image/gif)
2017-01-30 16:49 UTC, Matthew Guiddy
Details
Shaded windows still not valid target for snapping (474.66 KB, video/mp4)
2022-11-12 07:07 UTC, Matthew Guiddy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Guiddy 2017-01-30 07:23:31 UTC
Until fairly recently I have been able to snap windows (shaded or unshaded) to shaded windows.
I first noticed that a shaded window would not allow other windows (shaded or unshaded) to snap to it a few days ago.

Going by my update logs, I suspect this is a side effect of the fix for https://bugs.kde.org/show_bug.cgi?id=365892

Reproducible: Always

Steps to Reproduce:
1. Shade a window.
2. Attempt to snap another window to the shaded window.

Actual Results:  
The second window fails to snap to the shaded window.

Expected Results:  
The second window should snap to the edges of the shaded window.
Comment 1 Martin Flöser 2017-01-30 15:46:53 UTC
Do I understand correctly that it should snap to the geometry of the "unshaded" window? I assume it currently only snaps to the window decoration or is that also broken?
Comment 2 Matthew Guiddy 2017-01-30 16:41:06 UTC
A shaded window will not snap to the geometry of another shaded window.  
A shaded window will snap to screen edges and the geometry of unshaded windows.
An unshaded window will not snap to the geometry of a shaded window.

I will upload a gif showing this.
Comment 3 Matthew Guiddy 2017-01-30 16:49:13 UTC
Created attachment 103717 [details]
Visual example of shaded windows not snapping.
Comment 4 Martin Flöser 2017-02-01 06:09:48 UTC
Can reproduce.
Comment 5 Martin Flöser 2017-02-01 06:15:24 UTC
It looks like really a regression in named bug and that looks like making it easy to fix. But this time it gets a test case, so that it never happens again ;-)
Comment 6 Alexander Mentyu 2018-04-14 14:19:16 UTC
Can reproduce in:

Plasma: 5.12.4
Apps: 17.12.4
Frameworks: 5.44.0
Qt: 5.10.1
Kernel: 4.14.32-1-MANJARO
OS: Netrunner Rolling
Video: Intel 4400
Driver: xf86-video-intel 1:2.99.917+823+gd9bf46e4-1
Screen: 1600x900
Comment 7 kde.org 2021-11-06 20:45:37 UTC
This issue report is quite old. Can you please confirm, that it still persists with KDE 5.23?
Comment 8 Matthew Guiddy 2021-11-06 21:27:41 UTC
(In reply to kde.org from comment #7)
> This issue report is quite old. Can you please confirm, that it still
> persists with KDE 5.23?

Just updated Tumbleweed a couple days ago and it is still happening.

Based on version numbering, Tumbleweed is on KDE 5.23.2
Comment 9 Bug Janitor Service 2021-11-21 04:39:40 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 10 Matthew Guiddy 2022-07-22 23:23:19 UTC
Just updating the report to state it still happens in 5.25.3.
Comment 11 Bug Janitor Service 2022-09-15 09:58:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2952
Comment 12 Vlad Zahorodnii 2022-09-15 11:44:23 UTC
Git commit 7addb06b0ff94183848fa91fba689c4029193c7c by Vlad Zahorodnii, on behalf of Marco Martin.
Committed on 15/09/2022 at 10:51.
Pushed by vladz into branch 'master'.

Snap to shaded windows

Allow snapping to a shaded window

M  +1    -1    src/workspace.cpp

https://invent.kde.org/plasma/kwin/commit/7addb06b0ff94183848fa91fba689c4029193c7c
Comment 13 Matthew Guiddy 2022-11-12 07:06:02 UTC
Sorry to be a bother, but I see it says "Version Fixed In: 5.26", however I still cannot snap to shaded windows despite the installed version being 5.26.3.  I won't change the status in case there's a misunderstanding on my part.

In order to rule out something unique to my install, I tried it on a fresh Tumbleweed install in a VM and a KDE Neon Live disk running in a VM.  Same result, shaded windows are not a valid snap target.

I'll add a new video attachment of testing on a KDE neon live disc.

Tumbleweed SOFTWARE/OS VERSIONS
Linux/KDE Plasma: OpenSUSE Tumbleweed 20221110
(available in About System)
KDE Plasma Version: 5.26.3
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Kernel Version: 6.0.7-1-default (64-bit)
Graphics Platform: X11

KDE neon Live SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE neon 5.26
(available in About System)
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Kernel Version: 5.15.0-52-generic (64-bit)
Graphics Platform: X11
Comment 14 Matthew Guiddy 2022-11-12 07:07:53 UTC
Created attachment 153684 [details]
Shaded windows still not valid target for snapping

Updated video showing shaded windows not being a valid target for snapping after the bug was marked as fixed.
Comment 15 Matthew Guiddy 2023-02-25 16:07:58 UTC
Just posting to say that this is now fixed for me now that I updated to 5.27. 

Operating System: openSUSE Tumbleweed 20230220
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.12-1-default (64-bit)
Graphics Platform: X11