Snap to shaded windows

Allow snapping to a shaded window

BUG:375740